--- a/locales/en-US/welcome.json
+++ b/locales/en-US/welcome.json
@@ -12,7 +12,7 @@
     "defaultMessage": "I am your personal intelligent assistant {{appName}}. How can I assist you today?\nIf you need a more professional or customized assistant, you can click `+` to create a custom assistant.",
     "defaultMessageWithoutCreate": "I am your personal intelligent assistant {{appName}}. How can I assist you today?",
     "qa": {
-      "q01": "What is LobeHub?",
+      "q01": "What is Savvy AI?",
       "q02": "What is {{appName}}?",
       "q03": "Does {{appName}} have community support?",
       "q04": "What features does {{appName}} support?",
